--- a/pages/somos.html
+++ b/pages/somos.html
@@ -86,9 +86,27 @@
                     </div>
                 </article>
                 <article class="card-articulo">
-                    <figure class="imagen-articulo">
-                        <img src="" alt="imagen"/>
-                    </figure>
+                    <div class="icon-container">
+                        <h3 class="icon-heading text-center my-1">
+                            Conoce a las personas que han hecho
+                            que lograr un cambio se vuelva una realidad.
+                        </h3>
+                        <div class="grid grid-3 text-center my-4">
+                            <i class="fas fa-cover fa-3x"></i>
+                            <h3>200</h3>
+                            <p class="text-secondary">Covertura</p>
+                        </div>
+                        <div>
+                            <i class="fas fa-server fa-3x"></i>
+                            <h3>900</h3>
+                            <p class="text-secondary">Satisfechos</p>
+                        </div>
+                        <div>
+                            <i class="fas fa-project-diagram fa-3x"></i>
+                            <h3>900</h3>
+                            <p class="text-secondary">Satisfechos</p>
+                        </div>
+                    </div>
                     <div class="contenido-articulo">
                         <h3 class="card-titulo">personas impactadas3</h3>
                         <p class="card-texto">lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do 
