--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,40 +30,68 @@
         </div>
 
     </header>
-    <div class="box-root">
-        <h1>Contactanos</h1>
-    </div>
-        <div class="form-container">
-            <form id="stripe-login">
-                <div class="field-padding-bottom">
-                    <label for="name">Nombre</label>
-                    <input type="nombre" name="nombre">
-                </div>
-                <div class="field padding-bottom">
-                    <label for="email">Email</label>
-                    <input type="email" name="email">
-                </div>
-                <div class="field padding-bottom">
-                    <label for="asunto">Asunto</label>
-                    <input type="asunto" name="asunto">
-                </div>
-                <div class="field field-checkbox padding-bottom">
-                    <label for="checkbox">
-                        <input type="checkbox" name="checkbox"> recibir notificaciones
-                    </label>
-                </div>
-                <div class="field padding-bottom--24">
-                    <input type="submit" name="submit" value="Continue">
-                </div>
-            </form>
+    <main>
+        <div class="box-root">
+            <h1>Contactanos</h1>
         </div>
-        <div class="footer-link">
-            <div class="listing">
-                <span><a href="#">Contacto</a></span>
-                <span><a href="#">Terminos y condiciones</a></span>
+            <div class="form-container">
+                <form id="stripe-login">
+                    <div class="field-padding-bottom">
+                        <label for="name">Nombre</label>
+                        <input type="nombre" name="nombre">
+                    </div>
+                    <div class="field padding-bottom">
+                        <label for="email">Email</label>
+                        <input type="email" name="email">
+                    </div>
+                    <div class="field padding-bottom">
+                        <label for="asunto">Asunto</label>
+                        <input type="asunto" name="asunto">
+                    </div>
+                    <div class="field field-checkbox padding-bottom">
+                        <label for="checkbox">
+                            <input type="checkbox" name="checkbox"> recibir notificaciones
+                        </label>
+                    </div>
+                    <div class="field padding-bottom--24">
+                        <input type="submit" name="submit" value="Continue">
+                    </div>
+                </form>
+            </div>
+            <div class="footer-link">
+                <div class="listing">
+                    <span><a href="#">Contacto</a></span>
+                    <span><a href="#">Terminos y condiciones</a></span>
+                </div>
             </div>
         </div>
     </div>
-</div>
+        <section class="stats">
+            <div class="icon-container">
+                <h3 class="icon-heading text-center my-1">
+                    Conoce a.
+                </h3>
+                <div class="grid grid-3 text-center my-4">
+                    <i class="fas fa-cover fa-3x"></i>
+                    <h3>200</h3>
+                    <p class="text-secondary">Covertura</p>
+                </div>
+                <div>
+                    <i class="fas fa-server fa-3x"></i>
+                    <h3>900</h3>
+                    <p class="text-secondary">Satisfechos</p>
+                </div>
+                <div>
+                    <i class="fas fa-project-diagram fa-3x"></i>
+                    <h3>900</h3>
+                    <p class="text-secondary">Satisfechos</p>
+                </div>
+            </div>
+            <div class="contenido-articulo">
+                <h3 class="card-titulo">personas impactadas3</h3>
+                <p class="card-texto">lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do 
+            </div>
+        </section>
+    </main>
 </body>
 </html>
