--- a/pages/somos.html
+++ b/pages/somos.html
@@ -42,10 +42,10 @@
                 </ol>    
                     <div class="fluid-layout">
                         <h1>Quienes somos</h1>
-                        <p class="descripcion-entrada">Lorem ipsum dolor sit amet consectetur 
-                            adipisicing elit. Illo eaque tenetur omnis 
-                            similique, fugiat consequuntur. Alias officia a
-                            hic eligendi consequatur,
+                        <p class="descripcion-entrada">
+                            La Fundación Álex es, seguramente, 
+                            el proyecto más importante de la familia 
+                            Masfurroll-Cortada. Nace en memoria de su segundo hijo Álex y, desde el primer día, hace ya casi 20 años, se dedica a conseguir que todos los “Álex” de este mundo tengan una vida más sana y digna y estén plenamente incluidos en la sociedad.
                         </p>
                     </div>    
             </div>
@@ -58,62 +58,53 @@
                             <img src="../assets/img/boy.jpg" alt="familias-pioneras"/>
                         </div>
                         <div class="contenido-texto-familias">
-                            <h1>Familias Pioneras</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt dolor corrupti velit magnam pariatur. Maiores corporis eum quidem sint deleniti quisquam obcaecati exercitationem tempora delectus voluptas, 
-                            nulla possimus aut beatae.</p>
+                            <h1>Más de 15 años sumando logros</h1>
+                            <p>A lo largo de 15 años hemos impulsado y colaborado con multitud de proyectos para cambiar y mejorar la vida de los niños de este mundo.
+                                Conscientes de que ningún miembro de la tripulación es alabado por su individualidad, siempre 
+                                vamos de la mano con otras organizaciones y personas.
+                            </p>
                         </div>
                     </div>
                 </article>
             </section>
             <div style="height:60px" aria-hidden="true" class="wp-block-spacer"></div>
-            <section>
-                <article class="card-articulo">
-                    <figure class="imagen-articulo">
-                        <img src="" alt="imagen"/>
-                    </figure>
-                    <div class="contenido-articulo">
-                        <h3 class="card-titulo">personas impactadas1</h3>
-                        <p class="card-texto">lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do 
+            <section class="our-team-section">
+                <div class="team-title">
+                    <h1>Nuestro equipo</h1>
+                </div>
+                <div class="team-cards">
+                    <div class="team-card">
+                        <div class="team-image">
+                            <img class="president-image" src="../assets/img/member1.jpg">
+                        </div>   
+                        <div class="team-detail">
+                            <h3> Jimmie Carter</h3>
+                            <p> Presidente</p>
+                        </div>  
                     </div>
-                </article>
-                <article class="card-articulo">
-                    <figure class="imagen-articulo">
-                        <img src="" alt="imagen"/>
-                    </figure>
-                    <div class="contenido-articulo">
-                        <h3 class="card-titulo">personas impactadas2</h3>
-                        <p class="card-texto">lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do 
+                    <div class="team-card">
+                        <div class="team-image">
+                            <img  class="vice-image" src="../assets/img/member2.jpg">
+                        </div>   
+                        <div class="team-detail">
+                            <h3> Sofia Gonzales</h3>
+                            <p> Vice presidente</p>
+                        </div> 
                     </div>
-                </article>
-                <article class="card-articulo">
-                    <div class="icon-container">
-                        <h3 class="icon-heading text-center my-1">
-                            Conoce a las personas que han hecho
-                            que lograr un cambio se vuelva una realidad.
-                        </h3>
-                        <div class="grid grid-3 text-center my-4">
-                            <i class="fas fa-cover fa-3x"></i>
-                            <h3>200</h3>
-                            <p class="text-secondary">Covertura</p>
-                        </div>
-                        <div>
-                            <i class="fas fa-server fa-3x"></i>
-                            <h3>900</h3>
-                            <p class="text-secondary">Satisfechos</p>
-                        </div>
-                        <div>
-                            <i class="fas fa-project-diagram fa-3x"></i>
-                            <h3>900</h3>
-                            <p class="text-secondary">Satisfechos</p>
-                        </div>
+                    <div class="team-card">
+                        <div class="team-image">
+                            <img class="oficer-image" src="../assets/img/member3.jpg">
+                        </div>   
+                        <div class="team-detail">
+                            <h3> Maria Bustamante </h3>
+                            <p> Oficial de Cooperacion</p>
+                        </div> 
                     </div>
-                    <div class="contenido-articulo">
-                        <h3 class="card-titulo">personas impactadas3</h3>
-                        <p class="card-texto">lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do 
-                    </div>
-                </article>
+                </div>
+            </div>
+
             </section>
-        </section>
+
     </main>
     <footer class="footer-container-main">
         <div class="footer-container">
